--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,7 +1,9 @@
 <% @results.each do |result| %>
-  <%= result.name %>
-  <%= result.address %>
-  <%= result.fuel_type %>
-  <%= result.distance %>
-  <%= result.access_times %>
+  <div class=".stations">
+    <%= result.name %>
+    <%= result.address %>
+    <%= result.fuel_type %>
+    <%= result.distance %>
+    <%= result.access_times %>
+  </div>
 <% end %>
