add path helper, fix extra period in div class and fix test to use path helper

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -1,5 +1,5 @@
 <% @results.each do |result| %>
-  <div class=".stations">
+  <div class="stations">
     <%= result.name %>
     <%= result.address %>
     <%= result.fuel_type %>
